# Soul_Distiller

./: .gitignore  README.md  check_cn.py  create_pr.py  create_pr_chunk.py  create_pr_final.py  create_pr_fix.py  create_pr_fix2.py  create_pr_fix3.py  create_pr_frontend.py  create_pr_holographic.py  create_pr_perf.py  create_pr_perf2.py  create_pr_playground.py  create_pr_progress.py  create_pr_skill.py  create_pr_workspace.py  diff.txt  fix_indent.py  full_diff_temp.txt  patch_client.py  patch_routes.py  patch_routes2.py  patch_routes3.py  patch_templates.py  pyproject.toml  show_cn.py  test_bug.py  test_bug2.py  test_chunk.py  test_hybrid.py  test_jsonl.py  test_multiple.py  test_parse.py  test_process.py  test_process_2.py  translate_js_v2.py  translate_strings.py  update_htmls.py  update_htmls2.py
.trae/documents/: agent_trace_refactor_and_concurrency.md  chat_refactor_plan.md  stone_preprocess_plan.md  (+10 more)
app/: __init__.py  config.py  db.py  db_legacy.py  main.py  models.py  persona_plus.py  runtime_limits.py  schemas.py  stone_preprocess.py  stone_runtime.py  stone_v3_checkpoint.py  telegram_preprocess.py  telegram_support.py
persona_distiller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: cleanup_db.py  list_prs.py
tests/: conftest.py  test_architecture_refactor.py  test_chunking_retrieval.py  test_extractors.py  test_frontend_playwright.py  test_llm_and_analysis.py  test_llm_client.py  test_preprocess.py  test_stone_mode.py  test_stone_v3_mode.py  test_synthesizer.py  test_telegram_mode.py  test_web_app.py
参考/: role1_用户分析.txt  role2_skill提取.txt
(+314 files in other folders)
